# AI-openclip

./: .gitignore  README.md  README_EN.md  job_manager.py  pyproject.toml  streamlit_app.py  video_orchestrator.py
.claude/skills/video_highlights_processor/: SKILL.md
.streamlit/: config.toml
.trae/rules/: PRD.md
.trae/skills/video-clip-extractor/: SKILL.md
.trae/skills/video_highlights_processor/: SKILL.md
core/: clip_generator.py  config.py  cover_image_generator.py  engaging_moments_analyzer.py  file_string_utils.py  font_utils.py  insights_analyzer.py  subtitle_burner.py  title_adder.py  transcript_generation_paraformer.py  transcript_generation_whisper.py  video_splitter.py  video_utils.py
core/downloaders/: bilibili_downloader.py
core/editor/: runtime.py
core/llm/: custom_openai_api_client.py  openrouter_api_client.py  qwen_api_client.py
editor_frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
editor_frontend/src/: App.css  App.test.tsx  App.tsx  editorState.test.ts  editorState.ts  i18n.ts  index.css
tests/: test_config.py  test_custom_openai_client.py  test_editor_runtime.py  test_font_handling.py  test_funasr_json_to_srt.py  test_paraformer.py  test_qwen_client.py  test_subtitle_burner.py  test_transcript_routing.py  test_video_orchestrator.py
