[project]
name = "openclip"
version = "0.4.9"
description = "Video highlight extraction with transcript generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=1.0.3",
    "imageio-ffmpeg>=0.4.0",
    "yt-dlp[default] @ git+https://github.com/yt-dlp/yt-dlp.git@master",
    "requests>=2.31.0",
    "streamlit>=1.30.0",
    "openai-whisper>=20231117",
]

[project.optional-dependencies]
# Local Chinese ASR via a compatible FunASR Paraformer helper checkout
# Install with: uv sync --extra paraformer
# Runtime also expects a helper project checkout under third_party/funasr-paraformer
# (or PARAFORMER_PROJECT_DIR) that provides the transcription scripts.
paraformer = [
    "funasr>=1.3.0",
    "modelscope",
    "soundfile>=0.12.1",
    "torch",
    "torchaudio",
]

# Speaker identification for interview/panel/podcast videos
# Install with: uv sync --extra speakers
# Requires: HUGGINGFACE_TOKEN env var + accepted pyannote user agreements
speakers = [
    "whisperx>=3.8.1",
    "huggingface-hub<1.0.0",  # whisperx/pyannote compatibility
    "ffmpeg-python",
    "python-dotenv",
]

# ── PyTorch platform routing ─────────────────────────────────────────────────
# torch/torchaudio come transitively from whisperx; these sources tell uv
# which index to pull from per platform when the [speakers] extra is installed.
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
override-dependencies = [
    # torchcodec has no wheels for Linux aarch64, and its dylib is incompatible
    # with the CPU PyTorch wheel on macOS aarch64 (Apple Silicon), so limit to
    # platforms where it actually works.
    "torchcodec>=0.6.0; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'x86_64') or sys_platform == 'win32'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch",     marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
    { index = "pytorch",     marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
triton = [
    { index = "pytorch", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# ── Test configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access",
    "bilibili: marks tests specific to Bilibili platform",
    "youtube: marks tests specific to YouTube platform",
    "local_video: marks tests for local video file processing",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
